objects/Service_Ops_Projects__c.object
<CustomObject>
    <description>Used by Service Ops Project Management Team</description>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EM_Notes__c</fullName>
        <description>This field will contain the technical overview of project provided by the Engagement Manager.</description>
        <inlineHelpText>This field will contain the technical overview of project provided by the Engagement Manager.</inlineHelpText>
        <label>EM Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EM_Status_Update__c</fullName>
        <description>This field contains the EM Status for the service project.</description>
        <label>EM Status Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Manager__c</fullName>
        <description>The project&apos;s Launch Manager.</description>
        <label>Launch Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Type__c</fullName>
        <description>The type of project launch.</description>
        <label>Launch Type</label>
        <picklist>
            <picklistValues>
                <fullName>Awareness Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXEM Priority List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Services Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Lite</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>This field is used by management to assign a value to each project in order to determine capacity/workload.</description>
        <inlineHelpText>This field is used by management to assign a value to each project in order to determine capacity/workload.</inlineHelpText>
        <label>Level of Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Links_Resources__c</fullName>
        <label>Links &amp; Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestones__c</fullName>
        <label>Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Services_Impact__c</fullName>
        <description>This field contains the overall service impact</description>
        <label>Overall Services Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <description>Open, Closed, or Cancelled (based on Project Stage)</description>
        <formula>IF( ISPICKVAL(Project_Stage__c, &apos;Cancelled&apos;), &apos;Cancelled&apos;,
IF( ISPICKVAL(Project_Stage__c, &apos;Closed&apos;), &apos;Closed&apos;, &apos;Open&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open, Closed, or Cancelled (based on Project Stage)</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Notes__c</fullName>
        <inlineHelpText>Bullet Points with Dates</inlineHelpText>
        <label>PM Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PM_Sync_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked once the EM has transitioned this project to the PM.</description>
        <inlineHelpText>This box should be checked once the EM has transitioned this project to the PM.</inlineHelpText>
        <label>PM Sync Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>This field contains the Program associated with the Service Project.</description>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Focused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/Corp Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Launch Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Green: Project is on track for completion by GA Date. 
Yellow: Project target GA date is at risk of slipping.
Red: Project is blocked and team cannot make further progress.</description>
        <inlineHelpText>Green: Project is on track for completion by GA Date. 
Yellow: Project target GA date is at risk of slipping.
Red: Project is blocked and team cannot make further progress.</inlineHelpText>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Updates__c</fullName>
        <label>Project Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Engagement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project&apos;s Engagement Manager.</description>
        <label>Service Engagement Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notContain</operation>
                <value>Community</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Projects</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Services Projects</relationshipLabel>
        <relationshipName>Services_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Priority__c</fullName>
        <label>Services Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Services_Project_ID__c</fullName>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Services Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Steps_to_Green__c</fullName>
        <description>This field contains the steps to move the service project from red to green.</description>
        <label>Steps to Green</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <label>Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Launch_Date__c</fullName>
        <label>Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teams_Impacted__c</fullName>
        <label>Teams Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Strategist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Services Project</label>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Target_Launch_Date__c</columns>
        <columns>Teams_Impacted__c</columns>
        <columns>Service_Engagement_Manager__c</columns>
        <columns>Launch_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Service_Engagement_Manager__c</field>
            <operation>equals</operation>
            <value>David Lindahl</value>
        </filters>
        <label>David&apos;s Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Service_Engagement_Manager__c</columns>
        <columns>Launch_Manager__c</columns>
        <columns>Target_Launch_Date__c</columns>
        <columns>PM_Sync_Complete__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Overall_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Resource_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Service_Engagement_Manager__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Start_Date__c</columns>
        <columns>Target_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Overall_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Resource Assignments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Projects</pluralLabel>
    <recordTypes>
        <fullName>Project_Profile</fullName>
        <active>true</active>
        <label>Project Profile</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>